force-app/main/default/objects/Policy__c/fields/Insurance_After_Discount__c.field-meta.xml
<CustomField>
    <fullName>Insurance_After_Discount__c</fullName>
    <label>Insurance After Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>