force-app/main/default/objects/Policy__c/fields/Insurance_type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_type__c</fullName>
    <label>Insurance type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Car Insurance</fullName>
            </value>
            <value>
                <fullName>Home Insurance</fullName>
            </value>
            <value>
                <fullName>Life Insurance</fullName>
            </value>
            <value>
                <fullName>Field Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>