force-app/main/default/objects/Policy__c/fields/Insurnace_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insurnace_Amount__c</fullName>
    <label>Insurnace Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>