force-app/main/default/objects/Policy__c/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <label>Tenure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>5 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>